Update MVP index view general changes list

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -17,7 +17,6 @@
         </h2>
 
         {% set researchVersionsHtml %}
-
             <time datetime="2019-11-11" class="govuk-caption-m">11 November 2019</time>
 
             <h2 class="govuk-heading-l">MVP v1</h2>
@@ -63,6 +62,9 @@
                 </li>
                 <li>
                     Made typeahead minLength before searching 3 characters
+                </li>
+                <li>
+                    Change 'full name' to 'first name' and 'last name'
                 </li>
             </ul>
 
@@ -341,8 +343,6 @@
 
                     <h3 class="govuk-heading-s">Confidence level</h3>
 
-
-
                     <table class="govuk-table">
                         <thead class="govuk-table__head">
                             <tr class="govuk-table__row">
@@ -388,10 +388,6 @@
             <time datetime="2019-11-28" class="govuk-caption-m">28 November 2019</time>
 
             <h2 class="govuk-heading-l">Dev-ready v1</h2>
-
-            
-
-          
 
             <a href="/dev1/signin" class="govuk-button govuk-!-margin-right-1">View prototype</a>
             <a href="/dev1/dashboard-service-prap-no-orgs" class="govuk-button">View 'no organisations' dashboard</a>
