Copy amend on add user no org found error

--- a/app/views/mvp1/user-add-user-prap-org.html
+++ b/app/views/mvp1/user-add-user-prap-org.html
@@ -16,7 +16,7 @@
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
             {% set errorSummaryMessage %}
-                We have not found an organisation with this name. Check the name has been entered correctly, view organisations to look for the user’s employer or add a new organisation.
+            Organisation not found. Check its name has been entered correctly, view all organisations or add an organisation.
             {% endset %}
 
             {% if data['org-error'] %}
