--- a/app/views/mvp1/organisation-add-address-branch.html
+++ b/app/views/mvp1/organisation-add-address-branch.html
@@ -29,13 +29,13 @@
                           name: "add-org-address",
                           fieldset: {
                           legend: {
-                              html: '<span class="govuk-caption-l">Add an organisation</span>Do you want to add an organisation address?',
+                              html: '<span class="govuk-caption-l">Add an organisation</span>Do you want to add the organisation’s address now?',
                               isPageHeading: true,
                               classes: "govuk-fieldset__legend--l"
                           }
                           },
                           hint: {
-                            text: " An organisation address is required to allow user access to the service."
+                            text: "You will not be able to add users to this organisation until you add an address."
                           },
                           items: [
                           {
@@ -44,7 +44,7 @@
                           },
                           {
                               value: "add-org-address-no",
-                              text: "No"
+                              text: "No, I will add it later"
                           }
                           ]
                       }) }}
