--- a/app/views/mvp1/organisation-add-check.html
+++ b/app/views/mvp1/organisation-add-check.html
@@ -63,7 +63,7 @@
                             Contact
                           </dt>
                           <dd class="govuk-summary-list__value">
-                              {{ data["contact-1-name"] }} <br> {{ data["contact-1-job-title"] }} <br> {{ data["contact-1-email"] }} <br> {{ data["contact-1-phone"] }}
+                              {{ data["contact-1-first-name"] }} {{ data["contact-1-last-name"] }}<br> {{ data["contact-1-job-title"] }} <br> {{ data["contact-1-email"] }} <br> {{ data["contact-1-phone"] }}
                           </dd>
                           <dd class="govuk-summary-list__actions">
                             <a class="govuk-link" href="#">
@@ -78,10 +78,10 @@
                         {% if data['add-additional-org-contact'] == 'add-additional-org-contact-yes' %}
                         <div class="govuk-summary-list__row">
                           <dt class="govuk-summary-list__key">
-                            Additional contact
+                            Second contact
                           </dt>
                           <dd class="govuk-summary-list__value">
-                              {{ data["contact-2-name"] }} <br> {{ data["contact-2-job-title"] }} <br> {{ data["contact-2-email"] }} <br> {{ data["contact-2-phone"] }}
+                              {{ data["contact-2-first-name"] }} {{ data["contact-2-last-name"] }}<br> {{ data["contact-2-job-title"] }} <br> {{ data["contact-2-email"] }} <br> {{ data["contact-2-phone"] }}
 
                           </dd>
                           <dd class="govuk-summary-list__actions">
@@ -101,7 +101,7 @@
                             Additional contact
                           </dt>
                           <dd class="govuk-summary-list__value">
-                              {{ data["contact-3-name"] }} <br> {{ data["contact-3-job-title"] }} <br> {{ data["contact-3-email"] }} <br> {{ data["contact-3-phone"] }}
+                              {{ data["contact-3-first-name"] }} {{ data["contact-3-last-name"] }}<br> {{ data["contact-3-job-title"] }} <br> {{ data["contact-3-email"] }} <br> {{ data["contact-3-phone"] }}
 
                           </dd>
                           <dd class="govuk-summary-list__actions">
