Add mention on index view about search

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -28,6 +28,9 @@
 
             <ul class="govuk-list govuk-list--bullet">
                 <li>
+                    First attempt at <a href="/mvp1/mega-search-example">'MEGASEARCHATRON'</a>. With separate view for no-js users/The Blackwell Effect
+                </li>
+                <li>
                     Add first attempt at <a href="/mvp1/org-view-capita" class="govuk-link">organisation view</a> page
                 </li>
                 <li>
