Mention no results message on search example

--- a/app/views/mvp1/mega-search-example.html
+++ b/app/views/mvp1/mega-search-example.html
@@ -13,7 +13,7 @@
     <div class="govuk-grid-column-two-thirds dirty-height-hack">
         <h1 class="govuk-heading-l">Search example</h1>
 
-        <p>Search for 'xyz' or 'cap'</p>
+        <p>Search for 'xyz' or 'cap', or for no results, type anything else!</p>
 
         <form class="govuk-megasearch" aria-live="assertive" method="post" action="mega-search-results">
             <fielset class="govuk-fieldset">
