Add a service ID to service results in megasearch

--- a/app/views/mvp1/mega-search-example.html
+++ b/app/views/mvp1/mega-search-example.html
@@ -309,6 +309,10 @@
                         <li class="govuk-megasearch__item">
                             <span class="govuk-megasearch__result">
                                 Captain Service
+
+                                <span class="govuk-megasearch__identifier">
+                                    Service ID: DWPAUTH01
+                                </span>
                             </span>
 
                             <a href="#" class="govuk-link">View</a>
@@ -317,6 +321,10 @@
                         <li class="govuk-megasearch__item">
                             <span class="govuk-megasearch__result">
                                 Capital Service
+
+                                <span class="govuk-megasearch__identifier">
+                                    Service ID: DWPAUTH07
+                                </span>
                             </span>
 
                             <a href="#" class="govuk-link">View</a>
@@ -325,6 +333,10 @@
                         <li class="govuk-megasearch__item">
                             <span class="govuk-megasearch__result">
                                 CAPITAL Service
+
+                                <span class="govuk-megasearch__identifier">
+                                    Service ID: DWPAUTH92
+                                </span>
                             </span>
 
                             <a href="#" class="govuk-link">View</a>
