--- a/app/views/mvp1/mega-search-results.html
+++ b/app/views/mvp1/mega-search-results.html
@@ -221,6 +221,10 @@
                     <li class="govuk-megasearch__item">
                         <span class="govuk-megasearch__result">
                             Captain Service
+
+                            <span class="govuk-megasearch__identifier">
+                                Service ID: DWPAUTH01
+                            </span>
                         </span>
 
                         <a href="#" class="govuk-link">View</a>
@@ -229,6 +233,10 @@
                     <li class="govuk-megasearch__item">
                         <span class="govuk-megasearch__result">
                             Capital Service
+
+                            <span class="govuk-megasearch__identifier">
+                                Service ID: DWPAUTH07
+                            </span>
                         </span>
 
                         <a href="#" class="govuk-link">View</a>
@@ -237,6 +245,10 @@
                     <li class="govuk-megasearch__item">
                         <span class="govuk-megasearch__result">
                             CAPITAL Service
+
+                            <span class="govuk-megasearch__identifier">
+                                Service ID: DWPAUTH92
+                            </span>
                         </span>
 
                         <a href="#" class="govuk-link">View</a>
