Added first name last name to add user new

--- a/app/views/mvp1/user-add-user-prap-new.html
+++ b/app/views/mvp1/user-add-user-prap-new.html
@@ -39,6 +39,15 @@
 
                 {{ govukInput({
                     label: {
+                        text: "Last name"
+                    },
+                    id: "user-last-name",
+                    name: "user-last-name",
+                    classes: "govuk-!-width-three-quarters"
+                }) }}
+
+                {{ govukInput({
+                    label: {
                         text: "Email address"
                     },
                     id: "user-email-address",
