Added data paths for incomplete org details

--- a/app/views/mvp1/organisation-complete-details.html
+++ b/app/views/mvp1/organisation-complete-details.html
@@ -23,10 +23,8 @@
                 <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-7">
                     <li>{{ data['organisation-name'] }}’s address</li>
                     <li>details of 2 contacts who work for {{ data['organisation-name'] }}</li>
-                    <li>details of a second contact who works for {{ data['organisation-name'] }}</li>
+                    <!--<li>details of a second contact who works for {{ data['organisation-name'] }}</li>-->
                 </ul>
-                
-
               
                 <form action="/form-handler" method="post" novalidate>
 
