--- a/app/views/mvp1/organisation-list-prap.html
+++ b/app/views/mvp1/organisation-list-prap.html
@@ -28,26 +28,10 @@
                 </thead>
 
                 <tbody class="govuk-table__body">
-                    {% if data['add-org-address'] == 'add-org-address-no' %}
-                    <tr class="govuk-table__row">
-                        <th scope="row" class="govuk-table__header">
-                            <a href="org-view-custom" class="govuk-link">
-                                {{ data['organisation-name'] }} 
-                            </a> 
-                        </th>
-
-                        <td class="govuk-table__cell govuk-table__cell--numeric">
-                                0
-                        </td>
-
-                        <td class="govuk-table__cell">
-                            <a href="#" class="govuk-link">Complete details</a>
-                        </td>
-                    </tr>
-                    {% endif %}
+                    
 
 
-                    {% if data['organisation-name'] and data['add-org-address-yes'] %}
+                    {% if data['organisation-name'] and data['address-line-1'] and data['contact-1-first-name'] %}
                     <tr class="govuk-table__row">
                         <th scope="row" class="govuk-table__header">
                             <a href="org-view-custom" class="govuk-link">
@@ -71,6 +55,26 @@
                             {% endif %}
                         </td>
                     </tr>
+
+                    {% else %}
+
+                    <tr class="govuk-table__row">
+                        <th scope="row" class="govuk-table__header">
+                            <a href="org-view-custom" class="govuk-link">
+                                {{ data['organisation-name'] }} 
+                            </a> 
+                        </th>
+
+                        <td class="govuk-table__cell govuk-table__cell--numeric">
+                                0
+                        </td>
+
+                        <td class="govuk-table__cell">
+                            <a href="organisation-complete-details" class="govuk-link">Add user</a>
+                        </td>
+                    </tr>
+
+
                     {% endif %}
 
 
