Amends to add dwp user

--- a/app/views/mvp1/user-add-user-prap-dwp.html
+++ b/app/views/mvp1/user-add-user-prap-dwp.html
@@ -18,7 +18,7 @@
             <form action="user-confirmation-prap" method="post" class="form">
                 {{ govukFieldset({
                     legend: {
-                        html: '<span class="govuk-caption-l">Add a user</span>DWP user details',
+                        html: '<span class="govuk-caption-l">DWP</span>Add a user',
                         classes: "govuk-fieldset__legend--l",
                         isPageHeading: true
                     }
