Updates to index changes list

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -28,7 +28,13 @@
 
             <ul class="govuk-list govuk-list--bullet">
                 <li>
+                    Added an 'interstitial' page to prompt users to complete organisation details before adding users to an incomplete organisation
+                </li>
+                <li>
                     First attempt at <a href="/mvp1/mega-search-example">'MEGASEARCHATRON'</a>. With separate view for no-js users/The Blackwell Effect
+                </li>
+                <li>
+                    Expanded 'Add an organisation' journey to include address and contact details
                 </li>
                 <li>
                     Add first attempt at <a href="/mvp1/org-view-capita" class="govuk-link">organisation view</a> page
